Fixed horizontal scrolling on private-browsing.html

--- a/media/css/firefox/private_browsing/private-browsing.less
+++ b/media/css/firefox/private_browsing/private-browsing.less
@@ -546,3 +546,8 @@ html[lang^='en'] {
         width: @widthMobile;
     }
 }
+
+html, body{
+    max-width: 100%;
+    overflow-x: hidden;   
+}
